# gkl

./: README.md  gkl_data.py  pyproject.toml  to_streamlit.py
.logins/: gsheet_cred.json  zwift_cred.json
.streamlit/: secrets.toml
inputs/: info.py  race_sim.py
