[tool.poetry]
name = "gkl"
version = "0.1.0"
description = ""
authors = ["Graeme Acheson <graeme@sports4cast.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
streamlit = "^1.29.0"
gspread = "^5.12.2"
oauth = "^1.0.1"
streamlit-autorefresh = "^1.0.1"
gspread-dataframe = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
